@@ -15,6 +15,8 @@ BUG: Ticket#872 - use PATH_SEPARATOR in phpunit.php (fragmaster b)
 BUG: Ticket#886 - TSimpleDateFormatter: One month offset in time stamp with date pattern "yyyy" (Knut)
 BUG: Ticket#897 - TSimpleDateFormatter: If no YearPattern is set it should default to current year (Knut)
 BUG: Ticket#899 - TSqlCriteria: SQL-statements with limit and offset doesn't work (Knut)
+BUG: Ticket#904 - TDbConnection: Add emulate prepares workaround for boolean compares (Knut)
+BUG: Ticket#908 - TDbCache::init / Exception (Knut)
 ENH: Added Prado.Validation.validateControl(id) on client side to validate a specific control (Michael)
 ENH: Added MessageSource_Database to I18N (uses TDbConnection) (Michael)
 ENH: Ticket#890 - Minor optimization: Use $var===null over is_null($var) (Knut)
